--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
                onclick="location.href='itms-services://?action=download-manifest;url=https://AD6140.github.io/app.plist'" />
     </p>
     <p>
-        <input id="AveryMIM" type="button" value="Download Avery MIM"
+        <input id="AveryMIM" type="button" value="Download Avery MIM 1.87"
                onclick="location.href='itms-services://?action=download-manifest;url=https://AD6140.github.io/app2.plist'" />
+    </p>
+
+    <p>
+        <input id="AveryMIM" type="button" value="Download Avery MIM 1.89"
+               onclick="location.href='itms-services://?action=download-manifest;url=https://AD6140.github.io/app3.plist'" />
     </p>
 
 </body>
