--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="https://AD6140.github.io/Averylogo.png" alt="AveryLogo" width="50%" height="50%"/>
     <p>
         <input id="SampleApp" type="button" value="Download Sample App."
-               onclick="location.href='itms-services://?action=download-manifest;url=https://AD6140.github.io/app.plist'" />
+               onclick="location.href='itms-services://?action=download-manifesturl=https://AD6140.github.io/app.plist'" />
     </p>
     <p>
         <input id="AveryMIM" type="button" value="Download Avery MIM 1.87"
@@ -19,8 +19,10 @@
 
     <p>
         <input id="AveryMIM" type="button" value="Download Avery MIM 1.89"
-               onclick="location.href='itms-services://?action=download-manifest;url=https://AD6140.github.io/app3.plist'" />
+               onclick="location.href=itms-services://?action=download-manifest&url=https://AD6140.github.io/app3.plist" />
     </p>
+
+                                      
 
 </body>
 </html>
