--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <p>
         <input id="AveryMIM" type="button" value="Download Avery MIM 1.89"
-               onclick="location.href=itms-services://?action=download-manifest&url=https://AD6140.github.io/app3.plist" />
+               onclick="location.href='itms-services://?action=download-manifest;url=https://AD6140.github.io/app3.plist'" />
     </p>
 
                                       
