--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </p>
 
     <p>
-        <input id="AveryMIM" type="button" value="Download Avery MIM 1.89"
+        <input id="AveryMIM" type="button" value="Download Avery MIM 1.89 IOS"
                onclick="location.href='itms-services://?action=download-manifest;url=https://AD6140.github.io/app3.plist'" />
     </p>
 
